refactor: standardize boolean field naming and simplify exception handling logic
- Renamed boolean fields in repositories.
- Refactored `GlobalExceptionHandler` to remove redundant request type checks and unify response handling.
- Simplified `ChatServiceImpl` and other services with cleaner boolean logic and updated query methods.
- Extended `SecurityConfig` to allow Swagger-related endpoint access.
- Added null check for upload filenames in `FileStorageServiceImpl`.